--- a/Client/test.html
+++ b/Client/test.html
@@ -1,58 +1,157 @@
 <html>
 
 <head>
-<script src="https://code.jquery.com/jquery-2.0.3.min.js"></script>
-<script src="js/bootstrap.js"></script>
-<link rel="stylesheet" href="css/bootstrap.css">
+    <script src="https://code.jquery.com/jquery-2.0.3.min.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <link rel="stylesheet" href="css/bootstrap.css">
 </head>
+<div class="container">
 <nav class="navbar navbar-default" role="navigation">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Brand</a>
-    </div>
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Brand</a>
+        </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active">Link</li>
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-   
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                
+                <li><a href="#">Link</a>
+                </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Action</a>
+                        </li>
+                        <li><a href="#">Another action</a>
+                        </li>
+                        <li><a href="#">Something else here</a>
+                        </li>
+                        <li class="divider"></li>
+                        <li><a href="#">Separated link</a>
+                        </li>
+                        <li class="divider"></li>
+                        <li><a href="#">One more separated link</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">Link</a>
+                </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Action</a>
+                        </li>
+                        <li><a href="#">Another action</a>
+                        </li>
+                        <li><a href="#">Something else here</a>
+                        </li>
+                        <li class="divider"></li>
+                        <li><a href="#">Separated link</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
 </nav>
 
+    <div class="row">
+        <h3>最近使用</h3>
+        <div class="col-md-4">
+            <div class="thumbnail">
+                <img src="http://www.ct219.com/data/editor/images/0506-03.jpg" alt="...">
+                <div class="caption">
+                    <h3>菜單</h3>                           
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="thumbnail">
+                <img src="http://www.soonyi.com.tw/menu.jpg" alt="...">
+                <div class="caption">
+                    <h3>菜單</h3>       
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="thumbnail">
+                <img src="http://www.ct219.com/data/editor/images/0506-03.jpg" alt="...">
+                <div class="caption">
+                    <h3>Thumbnail label</h3>                    
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <h3>鄰近範本</h3>
+        <div class="col-md-4">
+            <div class="thumbnail">
+                <img src="http://www.ct219.com/data/editor/images/0506-03.jpg" alt="...">
+                <div class="caption">
+                    <h3>Thumbnail label</h3>                  
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="thumbnail">
+                <img src="http://www.ct219.com/data/editor/images/0506-03.jpg" alt="...">
+                <div class="caption">
+                    <h3>Thumbnail label</h3>                 
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="thumbnail">
+                <img src="http://www.ct219.com/data/editor/images/0506-03.jpg" alt="...">
+                <div class="caption">
+                    <h3>Thumbnail label</h3>                   
+                </div>
+            </div>
+        </div>
+
+    </div>
+     <div class="row">
+        <h3>最新範本</h3>
+        <div class="col-md-4">
+            <div class="thumbnail">
+                <img src="http://www.ct219.com/data/editor/images/0506-03.jpg" alt="...">
+                <div class="caption">
+                    <h3>Thumbnail label</h3>                  
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="thumbnail">
+                <img src="http://www.ct219.com/data/editor/images/0506-03.jpg" alt="...">
+                <div class="caption">
+                    <h3>Thumbnail label</h3>                 
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="thumbnail">
+                <img src="http://www.ct219.com/data/editor/images/0506-03.jpg" alt="...">
+                <div class="caption">
+                    <h3>Thumbnail label</h3>                   
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
 
 </html>
